Add prescribe command
The prescribe command allows adding medicines to patients,
similar to tags.
Add unit tests for prescribe command.